@@ -42,9 +42,9 @@
             return NULL;
 
         if (type == -1)
-            status = msShapefileOpen(shapefile, "rb", filename);
+            status = msShapefileOpen(shapefile, "rb", filename, MS_TRUE);
         else if (type == -2)
-            status = msShapefileOpen(shapefile, "rb+", filename);
+            status = msShapefileOpen(shapefile, "rb+", filename, MS_TRUE);
         else
             status = msShapefileCreate(shapefile, filename, type);
 
