@@ -12,6 +12,10 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- IGNORE_MISSING_DATA: largely replaced by run-time CONFIG property,
+  ON_MISSING_DATA, which supports three modes: FAIL, LOG, and IGNORE.
+  (#2785) ms-rfc-47.txt
+
 - mapstring.c: msStringTrim(*char str), front-and-back whitespace trimmer
 
 - mappostgis.c: re-write to remove binary cursors and break up 
